prometheus.v2.11.0/prometheus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
  name: prometheus-ingress
  namespace: monitoring
spec:
  rules:
    - host: k8s.xxx.com
      http:
        paths:
          - path: /prome/
            backend:
              serviceName: prometheus-k8s
              servicePort: 9090
          - path: /alert/
            backend:
              serviceName: alertmanager-main
              servicePort: 9093
          - path: /grafana/
            backend:
              serviceName: grafana
              servicePort: 3000
